syntax = "proto3";

package hatchet;

import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/hatchet";

message PostgresInstallParams {
    string version = 1 [(validate.rules).string.min_len = 1];
    map<string, string> settings = 2;
    bool use_orioledb = 3;
}

message StroppyRunParams {
    string version = 1 [(validate.rules).string.min_len = 1];
    string workflow_name = 2 [(validate.rules).string.min_len = 1];
    map<string, string> env = 3;
}