syntax = "proto3";

package stroppy;

import "crossplane/deployment.proto";
import "database/database.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/stroppy";

message StroppyCli {
    enum Workload {
        WORKLOAD_UNSPECIFIED = 0;
        TPCC = 1;
        TPCB = 2;
    }
    string version = 1 [(validate.rules).string.min_len = 1];
    optional string binary_path = 2;
    optional string workdir = 3;
    Workload workload = 4 [(validate.rules).enum.defined_only = true];
    string connection_string = 5 [(validate.rules).string.min_len = 1];
    map<string, string> stroppy_env = 6;
}

message Test {
    string name = 2;
    optional string description = 3;
    StroppyCli stroppy_cli = 4 [(validate.rules).message.required = true];
    crossplane.Hardware stroppy_hardware = 7 [(validate.rules).message.required = true];
    oneof database_ref {
        database.Database database = 101;
        string connection_string = 102 [(validate.rules).string.min_len = 1];
    }
}

message TestResult {
    string run_id = 1;
    Test test = 2 [(validate.rules).message.required = true];
    optional string grafana_url = 3;
}

message TestSuite {
    repeated Test tests = 1;
}

message TestSuiteResult {
    // Map of test run_id to test result
    map<string, TestResult> results = 1 [(validate.rules).map.min_pairs = 1];
}

